# Heterogeneous-Computing-with-OpenCL-2.0

./: CMakeLists.txt
Chapter 1 - Introduction/1.2 The Goals of this Book/: Notes.txt
Chapter 1 - Introduction/1.5 Threads and Shared Memory/: Notes.txt
Chapter 1 - Introduction/1.6 Message-Passing Communication/: Notes.txt
Chapter 1 - Introduction/1.7 Different Grains of Parallelism/: Notes.txt
Chapter 1 - Introduction/1.9 Book Structure/: Notes.txt
Chapter 2 - Device Architectures/2.2 Hardware Trade-Offs/2.2.1 Performance Increase with Frequency, and its Limitations/: Notes.txt
Chapter 2 - Device Architectures/2.2 Hardware Trade-Offs/2.2.2 Superscalar Execution/: Notes.txt
Chapter 2 - Device Architectures/2.2 Hardware Trade-Offs/2.2.6 Multicore Architectures/: Notes.txt
Chapter 2 - Device Architectures/2.2 Hardware Trade-Offs/2.2.7 Integration; Systems-on-Chip and the APU/: Notes.txt
Chapter 2 - Device Architectures/2.3 The Architectural Design Space/: Notes.txt
Chapter 2 - Device Architectures/2.3 The Architectural Design Space/2.3.2 GPU Architectures/: Notes.txt
Chapter 3 - Introduction to OpenCL/3.1 Introduction/3.1.1 The OpenCL Standard/: Notes.txt
Chapter 3 - Introduction to OpenCL/3.1 Introduction/3.1.2 The OpenCL Specification/: Notes.txt
Chapter 3 - Introduction to OpenCL/3.2 The OpenCL Platform Model/3.2.1 Platforms and Devices/: Notes.txt
Chapters/Chapter 1 - Introduction/1.1 Introduction to Heterogeneous Computing/: Notes.txt
Chapters/Chapter 1 - Introduction/1.3 Thinking Parallel/: Notes.txt
Chapters/Chapter 1 - Introduction/1.4 Concurrency and Parallel Programming/: Notes.txt
Chapters/Chapter 1 - Introduction/1.8 Heterogeneous Computing with OpenCL/: Notes.txt
Chapters/Chapter 2 - Device Architectures/2.1 Introduction/: Notes.txt
Chapters/Chapter 2 - Device Architectures/2.2 Hardware Trade-Offs/: Notes.txt
Chapters/Chapter 2 - Device Architectures/2.4 Summary/: Notes.txt
(+32 files in other folders)
